modified db user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8080
 # ===============================
 ##Using MySQL database
 spring.datasource.url=jdbc:mysql://localhost:3306/socialnetwork
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=user01
+spring.datasource.password=user@123
 
 # ===============================
 # = JPA / HIBERNATE
