--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 ##Using MySQL database
 spring.datasource.url=jdbc:mysql://localhost:3306/socialnetwork
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=pass123*
 
 # ===============================
 # = JPA / HIBERNATE
@@ -19,4 +19,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
 
