User login implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
+#spring.messages.basename=Messages when property file name doesn't match with standard we can specify its name here
+
