Profile page added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#=============================
+# JSP
+#==========================
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
+
+#==============
+# IMAGE UPLOAD MULTIPART
+#===========
+#spring.servlet.multipart.enabled=true
+##spring.servlet.multipart.file-size-threshold= 2KB
+##spring.servlet.multipart.max-file-size= 200MB
+##spring.servlet.multipart.max-request-size=215MB
+##file.upload.dir = /uploads
+
 
 #spring.messages.basename=Messages when property file name doesn't match with standard we can specify its name here
 
