--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.mvc.view.suffix=.jsp
 
 #spring.messages.basename=Messages when property file name doesn't match with standard we can specify its name here
 
+# ===============================
+# = IMAGE UPLOAD
+# ===============================
+spring.servlet.multipart.max-file-size=10028KB
+spring.servlet.multipart.max-request-size=10028KB
