Profile page changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,11 @@ spring.mvc.view.suffix=.jsp
 #==============
 # IMAGE UPLOAD MULTIPART
 #===========
-#spring.servlet.multipart.enabled=true
-##spring.servlet.multipart.file-size-threshold= 2KB
-##spring.servlet.multipart.max-file-size= 200MB
-##spring.servlet.multipart.max-request-size=215MB
-##file.upload.dir = /uploads
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold= 2KB
+spring.servlet.multipart.max-file-size= 200MB
+spring.servlet.multipart.max-request-size=215MB
+#file.upload.dir = /uploads
 
 
 #spring.messages.basename=Messages when property file name doesn't match with standard we can specify its name here
