JWT added and internationalization changed from Persion language to Spanish

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,6 @@ spring.servlet.multipart.max-request-size=215MB
 #spring.messages.basename=Messages when property file name doesn't match with standard we can specify its name here
 
 
+
+
+jwt.secret=mysecret
