Finished the functionality to send email to user upon deactivation (tested successfully).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,12 @@
 # ===============================
 server.port=8080
 # ===============================
-
 # = DATA SOURCE
 # ===============================
 ##Using MySQL database
 spring.datasource.url=jdbc:mysql://localhost:3306/socialnetwork
 spring.datasource.username=user01
 spring.datasource.password=user@123
-
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
@@ -19,22 +17,32 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jackson.serialization.fail-on-empty-beans=false
-
 #=============================
 # JSP
 #==========================
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
-
 #==============
 # IMAGE UPLOAD MULTIPART
 #===========
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold= 2KB
-spring.servlet.multipart.max-file-size= 200MB
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 #file.upload.dir = /uploads
-
+#==========================
+# Email settings
+#==========================
+spring.mail.host=smtp.gmail.com
+spring.mail.username=asal.sn.2019@gmail.com
+spring.mail.password=!AsalSN2019
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+# Other email properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 #spring.messages.basename=Messages when property file name doesn't match with standard we can specify its name here
 
