--- a/src/main/resources/errorMessages.properties
+++ b/src/main/resources/errorMessages.properties
@@ -8,11 +8,16 @@ Past={0} the date should be earlier than today
 # Field-related messages:
 profile.firstName = First Name
 profile.lastName = Last Name
+profile.occupation = Occupation
 profile.gender = Gender
 profile.email = Email
 profile.dateOfBirth = Date of birth
 username = Username
 password = Password
+address.country = Country
+address.city = City
+address.state = State
+
 
 Word.blank = You cannot enter a blank word.
 Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
