--- a/src/main/resources/errorMessages_spa.properties
+++ b/src/main/resources/errorMessages_spa.properties
@@ -8,11 +8,16 @@ Past= {0} la fecha debe ser anterior a hoy
 # Field-related messages:
 profile.firstName = Nombre de pila
 profile.lastName = Apellido
+profile.occupation = Ocupaci\u00F3n
 profile.gender = G\u00E9nero
 profile.email = Email
 profile.dateOfBirth = Fecha de nacimiento
 username = Nombre de usuario
 password = Contrase\u00F1a
+address.country = Pa\u00EDs
+address.city = Ciudad
+address.state = Estado
+
 
 Word.blank = No puede ingresar una palabra en blanco.
 Word.size = Una palabra poco saludable debe tener al menos {2} letras y no m\u00E1s de {1} letras.
