Internationalization added to the Admin pages

--- a/src/main/resources/errorMessages.properties
+++ b/src/main/resources/errorMessages.properties
@@ -4,6 +4,8 @@ NotEmpty={0} field must have a value
 NotBlank={0} field cannot be blank
 Email={0} field must be a valid email address
 Past={0} the date should be earlier than today
+Size= {0} size must be between 3 and 30
+
 
 # Field-related messages:
 profile.firstName = First Name
@@ -17,15 +19,7 @@ password = Password
 address.country = Country
 address.city = City
 address.state = State
-
+occupation = Occupation
 
 Word.blank = You cannot enter a blank word.
 Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
-
-# Page components:
-IndexPage.title =
-IndexPage.header =
-IndexPage.bodyText =
-ErrorPage.title =
-ErrorPage.header =
-ErrorPage.bodyText =
