--- a/src/main/resources/errorMessages_spa.properties
+++ b/src/main/resources/errorMessages_spa.properties
@@ -4,11 +4,13 @@ NotEmpty= {0} el campo debe tener un valor
 NotBlank= {0} el campo no puede estar en blanco
 Email= {0} el campo debe ser una direcci\u00F3n de correo electr\u00F3nico v\u00E1lida
 Past= {0} la fecha debe ser anterior a hoy
+Size= {0} el tama\u00F1o debe ser entre 3 y 30
+
 
 # Field-related messages:
 profile.firstName = Nombre de pila
 profile.lastName = Apellido
-profile.occupation = Ocupaci\u00F3n
+profile.occupation = Ocupaci\u00F3n 
 profile.gender = G\u00E9nero
 profile.email = Email
 profile.dateOfBirth = Fecha de nacimiento
@@ -17,15 +19,8 @@ password = Contrase\u00F1a
 address.country = Pa\u00EDs
 address.city = Ciudad
 address.state = Estado
+occupation = Ocupaci\u00F3n
 
 
 Word.blank = No puede ingresar una palabra en blanco.
 Word.size = Una palabra poco saludable debe tener al menos {2} letras y no m\u00E1s de {1} letras.
-
-# Page components:
-IndexPage.title =
-IndexPage.header =
-IndexPage.bodyText =
-ErrorPage.title =
-ErrorPage.header =
-ErrorPage.bodyText =
